add default string to ssh keys

--- a/trusty/go-app/config.yaml
+++ b/trusty/go-app/config.yaml
@@ -17,10 +17,10 @@ options:
     description: run-as user
   app_ssh_pub:
     type: string
-    default:
+    default: ""
     description: public deploy key
   app_ssh_priv:
     type: string
-    default:
+    default: ""
     description: private deploy key
 
